<resources>
    <string name="app_name">Keep Your Distance! Configurator</string>
    <!-- Dev Sync Device Fragment -->
    <string name="f_sync_connect">Connect to ESP32</string>
    <string name="f_sync_experiment">Move to Experiment</string>

    <!-- Dev Experiment Fragment -->
    <string name="f_dev_back">Back</string>
    <string name="f_dev_begin">Start</string>
    <string name="f_dev_cancel">Cancel</string>
    <string name="f_dev_waiting">Waiting to start…</string>
    <string name="f_dev_capturing">Capturing… Value: %d of %d</string>
    <string name="f_dev_done">Done capturing</string>

    <!-- Device Connect Fragment -->
    <string name="f_dc_title">Connect to Device</string>
    <string name="f_dc_maclabel">Previous Device:</string>
    <string name="f_dc_previousmac">None</string>
    <string name="f_dc_reconnect">Reconnect to Device</string>
    <string name="f_dc_scan">Scan</string>
    <string name="f_dc_choose">Choose Device</string>
    <string name="f_dc_connect">Connect to Selected Device</string>

    <!-- Device Info Fragment -->
    <string name="f_di_title">Device Info</string>
    <string name="f_di_maclabel">Device MAC Address:</string>
    <string name="f_di_aliaslabel">Device Name:</string>
    <string name="f_di_mac_default">No Previous Stored Address</string>
    <string name="f_di_alias_default">Name</string>
    <string name="f_di_total_interactions">Total Interactions:</string>
    <string name="f_di_connection_interactions">Interactions Since Connection:</string>
    <string name="f_di_interaction_data_default">0</string>
    <string name="f_di_export">Export Data</string>
    <string name="f_di_clear">Clear Data</string>
    <string name="f_di_disconnect">Disconnect</string>
    <string name="f_di_rename">Rename</string>
    <string name="f_di_rename_msg">New alias: </string>

    <!-- Settings Fragment -->
    <string name="f_s_title">Settings</string>
    <string name="f_s_distance">Alert Distance</string>
    <string name="f_s_profile">Profile</string>
    <string name="f_s_update">Update Device</string>
    <string name="f_s_result_default">ACK or NAK Result</string>
    <string name="f_s_result_synced">Synced</string>
    <string name="f_s_result_not_synced">Not Synced</string>

    <!-- Graph Fragment -->
    <string name="f_g_choose">Choose Graph</string>
    <string name="f_g_device">Choose Device</string>
    <string name="f_g_weekly">Daily Interactions by Weekday</string>
    <string name="f_g_total">All Interactions by Weekday</string>
    <string name="f_g_trend">Trend of Interactions Over Time</string>
    <string name="f_g_duration">Duration of Interactions (minutes)</string>
    <string name="f_g_distance">Avg Interaction Distance (centimetres)</string>

    <!-- Nav Bar -->
    <string name="nav_device">Device</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_graphs">Graphs</string>

    <!-- All Fragments -->
    <string name="cd_img_connected">Image showing that ESP32 device is connected.</string>
    <string name="cd_img_not_connected">Image showing that ESP32 device is not connected.</string>

    <!-- All Toasts -->
    <string name="toast_no_connect">Could not connect.</string>
    <string name="toast_disconnect_during_clear">Data still being cleared, try disconnecting again soon.</string>
    <string name="toast_scan_fail">Error: Scan failed, please retry</string>
    <string name="toast_no_file_perms">Can\'t export - file permission not given!</string>
    <string name="toast_export_success">Database exported to storage</string>
    <string name="toast_export_folder_fail">Could not create folders - aborting</string>
    <string name="toast_export_device_fail">Failed to export device table - aborting</string>
    <string name="toast_export_interaction_fail">Failed to export interaction table - aborting</string>
    <string name="toast_export_rssi_fail">Failed to export rssi table - aborting</string>

</resources>