<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingsFragment">

    <ImageView
        android:id="@+id/ivConnected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/cd_img_connected"
        android:src="@drawable/ic_connected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/f_s_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivConnected" />

    <TextView
        android:id="@+id/tvSDistanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:text="@string/f_s_distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSTitle" />

    <TextView
        android:id="@+id/tvSProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/f_s_profile"
        app:layout_constraintEnd_toEndOf="@+id/tvSDistanceLabel"
        app:layout_constraintStart_toStartOf="@+id/tvSDistanceLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvSDistanceLabel" />

    <Spinner
        android:id="@+id/spSDistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSDistanceLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSDistanceLabel"
        app:layout_constraintTop_toTopOf="@+id/tvSDistanceLabel" />

    <Spinner
        android:id="@+id/spSProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvSProfile"
        app:layout_constraintEnd_toEndOf="@+id/spSDistance"
        app:layout_constraintStart_toStartOf="@+id/spSDistance"
        app:layout_constraintTop_toTopOf="@+id/tvSProfile"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bSUpdate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/f_s_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSProfile" />

    <TextView
        android:id="@+id/tvSResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/f_s_result_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSUpdate" />
</androidx.constraintlayout.widget.ConstraintLayout>